--- a/src/Microsoft.Extensions.Configuration.Abstractions/project.json
+++ b/src/Microsoft.Extensions.Configuration.Abstractions/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.2",
+  "version": "1.1.2-net40",
   "buildOptions": {
     "warningsAsErrors": true,
     "keyFile": "../../tools/Key.snk",
@@ -9,17 +9,16 @@
   "packOptions": {
     "repository": {
       "type": "git",
-      "url": "https://github.com/aspnet/configuration"
+      "url": "https://github.com/dotnet40/configuration"
     },
     "tags": [
       "configuration"
     ]
   },
   "dependencies": {
-    "Microsoft.Extensions.Primitives": "1.1.1",
-    "NETStandard.Library": "1.6.1"
+    "Microsoft.Extensions.Primitives": "1.1.1-net40"
   },
   "frameworks": {
-    "netstandard1.0": {}
+    "net40": {}
   }
 }
