--- a/src/Microsoft.Extensions.Configuration.Json/project.json
+++ b/src/Microsoft.Extensions.Configuration.Json/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.2",
+  "version": "1.1.2-net40",
   "buildOptions": {
     "warningsAsErrors": true,
     "keyFile": "../../tools/Key.snk",
@@ -9,7 +9,7 @@
   "packOptions": {
     "repository": {
       "type": "git",
-      "url": "https://github.com/aspnet/configuration"
+      "url": "https://github.com/dotnet40/configuration"
     },
     "tags": [
       "configuration",
@@ -17,24 +17,12 @@
     ]
   },
   "dependencies": {
-    "Microsoft.Extensions.Configuration": "1.1.2",
-    "Microsoft.Extensions.Configuration.FileExtensions": "1.1.2",
-    "NETStandard.Library": "1.6.1",
+    "Microsoft.Extensions.Configuration": "1.1.2-net40",
+    "Microsoft.Extensions.Configuration.FileExtensions": "1.1.2-net40",
     "Newtonsoft.Json": "9.0.1"
   },
   "frameworks": {
-    "net451": {
-      "frameworkAssemblies": {
-        "System.Runtime": {
-          "type": "build"
-        }
-      }
-    },
-    "netstandard1.3": {
-      "dependencies": {
-        "System.Dynamic.Runtime": "4.3.0",
-        "System.Runtime.Serialization.Primitives": "4.3.0"
-      }
+    "net40": {
     }
   }
 }
